data/issues_nolabel/nolabel_test_3699.txt
inline compiler switch for __memcpy_inline?

Trying to build tensorflow on Ubuntu 16.04 with cuda 7.5 and gcc 4.9.3.
INFO: From Compiling tensorflow/core/kernels/batchtospace_op_gpu.cu.cc:
nvcc warning : option '--relaxed-constexpr' has been deprecated and replaced by option '--expt-relaxed-constexpr'.
nvcc warning : option '--relaxed-constexpr' has been deprecated and replaced by option '--expt-relaxed-constexpr'.
/usr/include/string.h: In function 'void* __mempcpy_inline(void*, const void*, size_t)':
/usr/include/string.h:652:42: error: 'memcpy' was not declared in this scope
   return (char *) memcpy (__dest, __src, __n) + __n;
                                          ^

I think __memcpy_inline needs an inline compiler switch turned on but this is the first time I've used bazel, and just what where?